--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 MONGO_DB_HOST=localhost
 MONGO_DB_PORT=27017
-DATABASE_NAME=crawl_results
-COLLECTION_NAME_DETIK=detik_new
+DATABASE_NAME=articles
+COLLECTION_NAME_DETIK=detik
 COLLECTION_NAME_LIPUTAN=liputan6
+DETIK_MAX_PAGE=3
+LIPUTAN_MAX_PAGE=0
